ttshelper는 tts변환 후 파일 저장 기능만 유지
foreground로 audioService 추가해서 mediaplayer 관리 전담.
-> 백그라운드에서 상시 관리하여 progressbar 동기화 가능

동기화는 성공했으나 MediaPlayer 로딩으로 Progress 업데이트가 늦어져 동기화가 실시간으로 반영되지 못함.
+ 뭘 건든지 모르겠는데 왜 자동 재생 사라졌지..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -23,8 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <service android:name=".view.OriginalAudioService"
+                 android:foregroundServiceType="mediaPlayback"
+                 android:exported="false"/>
+        <service android:name=".view.HomeAudioService"
+            android:foregroundServiceType="mediaPlayback"
+            android:exported="false"/>
         <activity android:name=".OriginalActivity" />
     </application>
+
 
 </manifest>
