search 파트 수정 테스트 필요
추가로 Item이 entity, view 두 곳에 존재 통일 필요.
-> api 확정 이후 수정 예정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:foregroundServiceType="mediaPlayback"
             android:exported="false"/>
         <activity android:name=".OriginalActivity" />
+        <activity android:name=".SimplePlayerActivity" />
     </application>
 
 
