--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -17,22 +16,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+
+        <!-- SplashActivity를 앱 시작점으로 -->
         <activity
-            android:name=".basic_layout"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name=".view.AudioService"
+        <!-- Main 화면 (자동 로그인 시 이동) -->
+        <activity android:name=".basic_layout" android:exported="true" />
+
+        <!-- 로그인 / 회원가입 -->
+        <activity android:name=".LoginActivity" android:exported="true" />
+        <activity android:name=".SignUpActivity" android:exported="true" />
+
+        <!-- ✅ 오디오 재생 관련 -->
+        <activity android:name=".OriginalActivity" android:exported="false" />
+        <activity android:name=".SimplePlayerActivity" android:exported="false" />
+
+        <service
+            android:name=".view.AudioService"
             android:foregroundServiceType="mediaPlayback"
-            android:exported="false"/>
-        <activity android:name=".OriginalActivity" />
-        <activity android:name=".SimplePlayerActivity" />
+            android:exported="false" />
+
     </application>
-
-
 </manifest>
